Move each filter element in separate tag preventing layout issues (in case of many selected)

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -513,6 +513,14 @@ del {
 }
 
 /*
+    Description for a blank (uncolored) label
+*/
+.blank-label-description {
+    font-size: .8rem;
+    margin-right: 0.5rem;
+}
+
+/*
     Click through
 */
 .click-through {
